--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">tab 1</a>
-            <a class="nav-item nav-link" href="#">tab 2</a>
+            <li class="nav-item nav-link active" href="#">Home</li>
+            <li class="nav-item nav-link active" href="#">tab 1</li>
+            <li class="nav-item nav-link" href="#">tab 2</li>
           </div>
         </div>
       </nav>
-      <div class="text-secondary" class="container">
+      <div  class="container">
           <div class="row bg-danger text-white">
               <div class="col">
                   <h1>left</h1>
       </div>
       
-      <div class="col bg-info">
+      <div class="col bg-info          ">
           <h1>right</h1>
       </div>
+      <footer class="fixed-bottom container-lg bg-dark"><button>Purchase my cats pictures</button></footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
   </body>
 
-  <footer class="fixed-bottom container-lg bg-dark"><button>Purchase my cats pictures</button></footer>
+ 
 </html>
